force-app/main/default/objects/Trigger_Handler_Config__mdt/Trigger_Handler_Config__mdt.object-meta.xml
<CustomObject>
    <description>Object-level trigger configuration - one per object</description>
    <label>Trigger Handler Config</label>
    <pluralLabel>Trigger Handler Configs</pluralLabel>
</CustomObject>