force-app/main/default/objects/Trigger_Handler_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable or disable all triggers for this object</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>