force-app/main/default/objects/Trigger_Handler_Config__mdt/fields/Bypass_All_Actions__c.field-meta.xml
<CustomField>
    <fullName>Bypass_All_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Emergency bypass - disable all trigger actions for this object</description>
    <label>Bypass All Actions</label>
    <type>Checkbox</type>
</CustomField>