force-app/main/default/objects/Trigger_Handler_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Documentation for this trigger configuration</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>