force-app/main/default/objects/Trigger_Handler_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Object_API_Name__c</columns>
    <columns>Description__c</columns>
    <columns>Bypass_All_Actions__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>